# nrf-LTETest

./: .gitignore  CMakeLists.txt  prj.conf
boards/: nRF9160dk_nrf9160ns.overlay
src/: main.c
